--- a/docs/p-search.texi
+++ b/docs/p-search.texi
@@ -1189,14 +1189,14 @@ generator is to be displayed in various places.  For example, the
 @emph{FILESYSTEM} candidate generator returns the string ``FS:'' plus
 the directory being searched on.
 
-@item :term-frequency-function @var{tf-func}
+@item :term-frequency-func @var{tf-func}
 This function, when provided, should accept three parameters: the arguments of the candidate generator, the term being searched on, and the callback to call after the terms are counted.
 
 The arguments are the combined inputs/outputs, similar to the other functions.  The term is an Emacs regular expression form as data (@pxref{Regular Expressions,,,elisp,GNU Emacs Lisp Reference Manual}).  The callback should be called with one argument: a hashmap of document ID to term count.
 
 This is an optional argument and if this function isn't provided, p-search will search the contents using Elisp.  The main usage of this function is to give p-search a faster way to search rather than Elisp.
 
-@item :condenced-arg-display-function @var{func}
+@item :short-arg-disp-func @var{func}
 This function can be defined in order to define a custom string to
 show when the candidate generator's section is folded.  The function should take one argument, a cons pair of candidate generator and its arguments, and should return a string to be displayed when the candidate generator is folded.
 @end table
@@ -1234,6 +1234,12 @@ then calling @code{(p-search-documentize (base (cons "My Title" "my
 content...")))} will result in a document with @var{id} of @code{(base
 (cons "My Title" "my content..."))}, @var{title} of @code{"My Title"}
 and content of @code{"my content..."}.
+
+You can define fields (@pxref{Fields}) for candidate generators in a
+simmilar manner using @code{p-search-def-property}.  @code{fields},
+@code{name} and @code{content} are the three properties with generic
+use in p-search.  Other properties can be defined, and will normally
+exist in conjunction with a specific type of prior.
 
 If we wanted to make a candidate generator for Wikipedia entries, we could make the following definition:
 
@@ -1326,6 +1332,8 @@ Take an existing document and return a new document extended with various proper
 The @var{new-fields} argument should be an alist of any new fields to be added to the document. The fields will be appended to the document and previously added fields will never be overwritten.
 
 The @var{new-props} argument should be a an alist of any new properties to give the document.  Properties given here, unlike fields, will overwrite the previous value.
+
+This function @strong{should not} be used in candidate generators, only mappings.
 @end defun
 
 @node Input/Options Specification
